# license-control

./: README.md  meson.build
conf/: license.json  token
include/: licensecontrol.hpp
service_files/: xyz.openbmc_project.License.LicenseControl.service
src/: licenseDbus.cpp  licenseDecrypt.cpp  licensecontrol.cpp
